@@ -1,3 +1,11 @@
+2016-02-27 S. Thiell <sthiell@stanford.edu>
+
+	* Communication.py: remove 76-char base64 encoding fixed length
+	restriction for tree XML payload communication. The default max length is
+	now 64K, which gives good results. The environment variable
+	'CLUSTERSHELL_GW_B64_LINE_LENGTH' is propagated to gateways and may be
+	used to override this value.
+
 2016-02-12 S. Thiell <sthiell@stanford.edu>
 
 	* RangeSet.py and NodeSet.py: fix bad 0-padding handling by RangeSetND or
